# tilck-kernel

./: CLAUDE.md  CMakeLists.txt  Makefile
common/: string_util.c
include/system_headers/: elf.h  features.h
include/system_headers/asm-generic/: signal-defs.h
include/system_headers/linux/: auxvec.h  fb.h  kd.h  major.h  sched.h  termbits_compat.h  time_compat.h
include/system_headers/sys/: prctl.h
include/tilck/common/: basic_defs.h  datetime.h  string_util.h
include/tilck/common/debug/: termios_debug.c.h
include/tilck/kernel/: errno.h  hal.h  paging.h  sys_types.h
kernel/: CMakeLists.txt  datetime.c  signal.c  switch.c  syscalls.c  tilck_cmd.c
kernel/arch/generic_x86/: rtc.c
kernel/arch/i386/: CMakeLists.txt
kernel/arch/riscv64/: CMakeLists.txt
kernel/arch/x86_64/: CMakeLists.txt
kernel/kmalloc/: kmalloc_heaps.c.h
kernel/tty/: tty_ioctl.c
other/bsp/riscv64/qemu-virt/: board_bsp.cmake
other/ci/: tc-arch-i386.yml  tc-arch-riscv64.yml  tc-debian-i386.yml  tc-debian-riscv64.yml  tc-fedora-i386.yml  tc-fedora-riscv64.yml
other/cmake/: build_modules.cmake  gen_config_pre.cmake  kernel_options.cmake
other/containers/tilck-i386/: Dockerfile
other/containers/tilck-riscv64/: Dockerfile
other/containers/tilck-x86_64/: Dockerfile
scripts/: bash_build_toolchain  build_toolchain  cmake_run
scripts/bash_includes/: install_pkgs  script_utils
scripts/build_apps/: CMakeLists.txt  machohack.c  mbrhack.c
scripts/musl-cross-configs-darwin/: aarch64-gcc-13.3  i686-gcc-13.3  riscv64-gcc-13.3  x86-64-gcc-13.3
scripts/pkgmgr/: acpica.rb  arch.rb  busybox.rb  cache.rb  early_logic.rb  gcc.rb  gnuefi.rb  gtest.rb  lcov.rb  main.rb  mtools.rb  ncurses.rb  package.rb  package_manager.rb  pkgmgr.rb  progress.rb  tcc.rb  term.rb  tfblib.rb  treecmd.rb  uboot.rb  version.rb  version_check.rb  vim.rb  zlib.rb
scripts/pkgmgr/tests/: run_all.rb  system_tests.rb  test_helper.rb  test_install_flow.rb  test_main.rb  test_package.rb  test_package_extras.rb  test_package_manager.rb  test_pkgmgr_coverage.rb  test_progress.rb  test_resolve_name.rb  test_show_status.rb  test_uninstall.rb  test_version.rb
scripts/templates/: build_bootpart  build_fatpart  build_test_fatpart  weaken_syms_macos
tests/system/scripts/: tcc
tests/unit/: CMakeLists.txt  mocking.cpp  vfs_test.h
userapps/: CMakeLists.txt
